--- a/Gradient Grid/Gradient Grid.csproj
+++ b/Gradient Grid/Gradient Grid.csproj
@@ -60,6 +60,9 @@
     <Compile Include="PluginSupportInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy "$(TargetPath)" "%25PROGRAMW6432%25\Paint.NET\Effects\"</PostBuildEvent>
